--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>🔴 BF6 BATTLE ROYALE IS HERE! (Battlefield 6 REDSEC Gameplay)</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Embrace Challenges for Growth | Eckhart Tolle on Awakening Though Life's Challenges (Part 3)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Emotional Trading: Key Skills for Successful Traders #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Ecstasy Beyond Pills | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -332,7 +332,7 @@
                     <div class="video-info">
                         <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1432,7 +1432,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN CATEGORIES: ALPHABET EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Emotional Trading: Key Skills for Successful Traders #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5171,7 +5171,7 @@
                         <div class="video-info">
                             <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Embrace Challenges for Growth | Eckhart Tolle on Awakening Though Life's Challenges (Part 3)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Ecstasy Beyond Pills | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>🔴 BF6 BATTLE ROYALE IS HERE! (Battlefield 6 REDSEC Gameplay)</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9682,7 +9682,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN CATEGORIES: ALPHABET EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
