--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Why smart people fall for self-help gurus</h3>
                         <div class="channel">Matt D'Avella</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Review  Pizza tools.( Pro Peel Gozney and Lilly Codroipo Spatula)</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>🔴 Battlefield 6 BATTLE ROYALE IS HERE!</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Why You Can’t Afford to Bank That Winning Trade 💭</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN FIND THE MISSING WORD</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 28.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Embrace Challenges for Growth | Eckhart Tolle on Awakening Though Life's Challenges (Part 3)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Sidemen’s Biggest Clutch!</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>The Highway to Liberation | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Emotional Trading: Key Skills for Successful Traders #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>How to stretching a pizza a Dj style very easy way #pizzamaker #pizzatools #pizzadough</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - The Inner Sport of Letting Go</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Ecstasy Beyond Pills | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Performance Coaching - Session 12</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -662,7 +662,7 @@
                     <div class="video-info">
                         <h3>There is No Need to be Perfect |Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -772,7 +772,7 @@
                     <div class="video-info">
                         <h3>Do Not Look for Meaning of Life | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1465,7 +1465,7 @@
                     <div class="video-info">
                         <h3>[REAL ACCOUNT] Lost 8,000 in one Week Trading... (XAUUSD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Why You Can’t Afford to Bank That Winning Trade 💭</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 28.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>Emotional Trading: Key Skills for Successful Traders #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5116,7 +5116,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Performance Coaching - Session 12</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5633,7 +5633,7 @@
                         <div class="video-info">
                             <h3>[REAL ACCOUNT] Lost 8,000 in one Week Trading... (XAUUSD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Embrace Challenges for Growth | Eckhart Tolle on Awakening Though Life's Challenges (Part 3)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>The Highway to Liberation | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - The Inner Sport of Letting Go</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Ecstasy Beyond Pills | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7458,7 +7458,7 @@
                         <div class="video-info">
                             <h3>There is No Need to be Perfect |Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7513,7 +7513,7 @@
                         <div class="video-info">
                             <h3>Do Not Look for Meaning of Life | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8234,7 +8234,7 @@
                         <div class="video-info">
                             <h3>Why smart people fall for self-help gurus</h3>
                             <div class="channel">Matt D'Avella</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>Review  Pizza tools.( Pro Peel Gozney and Lilly Codroipo Spatula)</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8746,7 +8746,7 @@
                         <div class="video-info">
                             <h3>How to stretching a pizza a Dj style very easy way #pizzamaker #pizzatools #pizzadough</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>🔴 Battlefield 6 BATTLE ROYALE IS HERE!</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9583,7 +9583,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN FIND THE MISSING WORD</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9594,7 +9594,7 @@
                         <div class="video-info">
                             <h3>Sidemen’s Biggest Clutch!</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
